--- a/meta.yaml
+++ b/meta.yaml
@@ -1,6 +1,6 @@
-name: Telephone
+name: Mask
 version: 1.0
-description: Fieldtype de telefone pt-br
+description: Fieldtype mask
 url: -
 developer: Diego Silva
 developer_url: http://dsilva.eti.br
